apps/base/media/notifiarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notifiarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notifiarr
  template:
    metadata:
      labels:
        app: notifiarr
    spec:
      containers:
      - name: notifiarr
        image: golift/notifiarr:0.8.3
        
        securityContext:
          allowPrivilegeEscalation: false
          
        ports:
        - containerPort: 5454
        volumeMounts:
        - name: config
          mountPath: /config
        - name: machine-id
          mountPath: /etc/machine-id
      volumes:
      - name: config
        hostPath:
          path: /mnt/data/configs/notifiarr
          type: Directory
      - name: machine-id
        hostPath:
          path: /etc/machine-id
          type: Directory
