apps/base/media/notifiarr/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: notifiarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notifiarr
  template:
    metadata:
      labels:
        app: notifiarr
    spec:
      containers:
        - name: notifiarr
          image: golift/notifiarr:v0.9.7

          securityContext:
            allowPrivilegeEscalation: false

          resources:
            requests:
              memory: "32Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "500m"

          ports:
            - containerPort: 5454
          volumeMounts:
            - name: config
              mountPath: /config
            - name: machine-id
              mountPath: /etc/machine-id
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: notifiarr-config
        - name: machine-id
          hostPath:
            path: /etc/machine-id
            type: File
