apps/base/media/notifiarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notifiarr
spec:
  selector:
    app: notifiarr
  ports:
    - port: 5454
      targetPort: 5454
  type: NodePort
